@@ -139,7 +139,7 @@
                 <version>2.1</version>
                 <configuration>
                     <!-- 注意此处的url,它的值就是第一步中的tomcat发布应用管理页面地址 -->
-                    <url>http://localhost:8080/manager/text</url>
+                    <url>http://192.168.99.100:32772/manager/text</url>
                     <server>tomcat7</server> <!-- 此处的名字必须和setting.xml中配置的ID一致 -->
                     <username>admin</username>
                     <password>admin</password>
@@ -147,16 +147,7 @@
                 </configuration>
             </plugin>
 
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-                    <argLine>-Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=256m</argLine>
-                    <forkMode>once</forkMode>
-                </configuration>
-            </plugin>
+            
         </plugins>
     </build>
 
